2002-12-16  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: implemented -Y (GraphViz)

	* src/2hash.h: moved static pool allocator stuff into #ifdef
	CUSTOMNEW and tested with/without it defined

	* src/finite.cc: added -Y option for output of GraphViz .dot files

2002-12-13  Jonathan Graehl  <graehl@isi.edu>

	removed leftover node.h (old homegrown list) from CVS

	* src/slist.h: (and many other files) - when USE_SLIST defined in
	config.h, use a singly linked list (memory efficient) in all
	cases.  required some serious rework, but I was using a singly
	linked list until Yaser tore it out in favor of STL list.  my
	slist is largely STL compatible (not everything implemented) with
	the addition of two types of iterators - one that uses an extra
	level of indirection to allow insertion, and another that uses a
	plain pointer for more efficiently examining values

2002-12-10  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: allow zero-weight arcs on input - useful with -U prior counts

	* src/train.cc: changed trainBegin to take parameters for -f and
	-U.  new prior_counts attribute for each arc in training (Dirichlet prior)

	* src/finite.cc: added -U option: initial weights as prior counts for training

2002-11-22  Jonathan Graehl  <graehl@isi.edu>

	* src/graph.cc: changed mind.  split into two functions - one that
	builds all-source->one dest tree, other does single-source
	dijikstra and sets taken link pointers

	* src/kbest.cc: changed mind.  moved kbest reverse code into
	graph.cc function

	* src/finite.cc: added command line description of -w, -z

	* src/fst.h: added clear() and printArc()
	
	* src/config.h: added Config::debug() warn() and log() stream
	fetchers.  new DEBUG options

	* src/fst.cc: added prunePaths code.  tested.  changed reduce,
	removing yaser's set-tie-group-to-zero for deleted arcs.  should
	have no effect.

	* src/kbest.cc: because of change in graph.cc, reverse graph
	before bestPathsTree.
